# lz-tts

./: .gitignore  AGENTS.md  main.py  pyproject.toml
cache/voice_samples/f3d3aad24843d6eb/: reference_audio.parakeet.txt  source.json
faster_qwen3_tts/: cli.py  mixed_precision.py  model.py  predictor_graph.py  sampling.py  talker_graph.py
scripts/: download_data.py  download_models.py  upload_data.py  upload_models.py
src/: __init__.py  qwen_dp_budget.py  ssml.py
src/api/: __init__.py  qwen3.py  server.py
src/multilingual_splitter/: __init__.py  multilingual_splitter.py  test_multilingual_splitter.py
src/phonemizer/: CMakeLists.txt  pyproject.toml
src/phonemizer/piper_phonemize/: __init__.py
src/phonemizer/src/: phonemize.cpp  phonemize.hpp  python.cpp
src/piper/: __init__.py  heteronym.py  infer.py  inference.py  preprocess.py  semantic.py
src/piper/vits/: config.py  lightning.py  models.py  monotonic_align.py  transforms.py
src/qwen3_demo/: index.html  server.py
