[project]
name = "lz-tts"
version = "0.1.0"
description = "Minimal Piper TTS inference pipeline"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "numpy>=1.26.0,<1.27",
    "torch==2.9.1",
    "pytorch-lightning==2.6.0",
    "torchmetrics==1.8.2",
    "piper-phonemize",
    "transformers>=4.39.0,<4.40",
    "sentencepiece>=0.2.0,<0.3",
    # piper_train dependencies for inference
    "pycld2==0.41",
    "wordfreq>=3.1.0,<3.2",
    "six>=1.17.0,<1.18",
    "librosa>=0.11.0,<0.12",
    "unicodedataplus>=16.0.0,<16.1",
    "regex>=2026.1,<2027",
    # CJK tokenization for multilingual_splitter
    "mecab-python3>=1.0.0,<1.1",
    # Japanese text normalization for preprocess.py
    "fugashi>=1.5.0,<1.6",
    "pykakasi>=2.3.0,<2.4",
    "mecab-ko-dic>=1.0.0,<1.1",
    "ipadic>=1.0.0,<1.1",
    "jieba>=0.42.0,<0.43",
    # API server
    "fastapi>=0.115.0,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "pydub>=0.25.1",
    "boto3>=1.42.30",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
lz-tts = "src.cli:main"
lz-tts-server = "src.api.server:run"

[tool.uv.sources]
piper-phonemize = { path = "./src/phonemizer" }
